--- a/readme.text
+++ b/readme.text
@@ -1,3 +1,7 @@
+just type "make" in terminal and code runs perfectaly
+you can figget out any thing
+
+
 Why these names?
 
 Filename	      |     Meaning
